force-app/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <description>1. Integration relevant (Grace)
2. ZR
3. SF-717</description>
    <label>Angebot.</label>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Quote SF ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Angebote.</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>