force-app/main/default/objects/Quote__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Integration relevant (Grace)
2. ZR
3. SF-717</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes.</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>