force-app/main/default/objects/Quote__c/fields/Business_Area__c.field-meta.xml
<CustomField>
    <fullName>Business_Area__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Potential</valueSetName>
    </valueSet>
</CustomField>