force-app/main/default/objects/Quote__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <inlineHelpText>Only contacts which are already linked to the Account of the Quote can be added.</inlineHelpText>
    <label>Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Deletion_Code__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes.</relationshipLabel>
    <relationshipName>Quotes_Rental</relationshipName>
    <type>Lookup</type>
</CustomField>