force-app/main/default/objects/Quote__c/fields/Current_KAM_LAM_Filter_for_Report__c.field-meta.xml
<CustomField>
    <fullName>Current_KAM_LAM_Filter_for_Report__c</fullName>
    <description>1, Not integration relevant
2. ZRD
3. Helper field for reports in order to filter Quotes for the KAM/LAM looking at the report.</description>
    <formula>IF( Account__r.Key_Account_Manager__r.Id  = $User.Id || Account__r.Large_Account_Manager__r.Id  = $User.Id,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current KAM/LAM Filter for Report</label>
    <type>Checkbox</type>
</CustomField>