force-app/main/default/objects/Quote__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>1. Integration relevant (GRACE)
2. SF-717
3.</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>