force-app/main/default/objects/Quote__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>1. Integration relevant (GRACE)
2. SF-717
3.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>