force-app/main/default/objects/Quote__c/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>1. Integration relevant
2. ZR
3.</description>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loss_Reason</valueSetName>
    </valueSet>
</CustomField>