force-app/main/default/objects/Quote__c/fields/Order_Reference__c.field-meta.xml
<CustomField>
    <fullName>Order_Reference__c</fullName>
    <description>1. Integration relevant (GRACE)
2. SF-717
3.</description>
    <label>Order Reference</label>
    <length>25</length>
    <type>Text</type>
</CustomField>