force-app/main/default/objects/Quote__c/fields/Quote_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Net_Amount__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3. SF-717</description>
    <label>Quote Net Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>