force-app/main/default/objects/Quote__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <description>1. Integration relevant (GRACE)
2. SF-717
3.</description>
    <externalId>true</externalId>
    <label>Quote Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>