force-app/main/default/objects/Quote__c/fields/Running_User_is_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Running_User_is_Account_Owner__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Helper Field to check if the Running User of a List View is the Account Owner of the Quote</description>
    <formula>IF(  Account__r.Owner.Id   =   $User.Id , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Running User is Account Owner</label>
    <type>Checkbox</type>
</CustomField>