force-app/main/default/objects/Quote__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3. SF-717</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEU</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>RUN</fullName>
                <label>Ongoing</label>
            </value>
            <value>
                <fullName>ABG</fullName>
                <label>Closed</label>
            </value>
            <value>
                <fullName>AUS</fullName>
                <label>Suspended</label>
            </value>
            <value>
                <fullName>END</fullName>
                <label>Finished</label>
            </value>
            <value>
                <fullName>STO</fullName>
                <label>Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>