force-app/main/default/objects/Quote__c/fields/Successful_Quote__c.field-meta.xml
<CustomField>
    <fullName>Successful_Quote__c</fullName>
    <formula>IF((ISPICKVAL( Status__c ,&quot;ABG&quot;) || ISPICKVAL(Status__c, &quot;END&quot;)|| ISPICKVAL(Status__c, &quot;AUS&quot;)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1. Not integration relevant
2. ZR
3. Helper field to report on successful Quotes</inlineHelpText>
    <label>Successful Quote</label>
    <type>Checkbox</type>
</CustomField>