force-app/main/default/objects/Quote__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR.
3.</description>
    <label>Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>