force-app/main/default/objects/Quote__c/fields/Transaction_Category__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Category__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-777</description>
    <label>Transaction Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>VAB</fullName>
                <label>Quote Existing Customer Commercial</label>
            </value>
            <value>
                <fullName>VAR</fullName>
                <label>Quote Existing Customer Private</label>
            </value>
            <value>
                <fullName>VAG</fullName>
                <label>Quote New Customer Commercial</label>
            </value>
            <value>
                <fullName>VAP</fullName>
                <label>Quote New Customer Private</label>
            </value>
            <value>
                <fullName>VAO</fullName>
                <label>Quote Rental Online</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>