force-app/main/default/objects/Quote__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>1. Integration relevant (GRACE)
2. SF-717
3.</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QB</fullName>
                <label>Quote Stock Sales</label>
            </value>
            <value>
                <fullName>QC</fullName>
                <label>Quote Contract Operator Model</label>
            </value>
            <value>
                <fullName>QG</fullName>
                <label>Quote Used Sale</label>
            </value>
            <value>
                <fullName>QR</fullName>
                <label>Quote Rental</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>