force-app/main/default/objects/Quote__c/fields/Use_Territory_from_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Use_Territory_from_Opportunity__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-910</description>
    <label>Use Territory from Opportunity?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>