force-app/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Quote_Net_Amount__c</columns>
    <columns>Quote_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Contact__c</columns>
    <columns>Project__c</columns>
    <columns>Order_Reference__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Angebote</label>
</ListView>