force-app/main/default/objects/Quote__c/listViews/My_Quotes.listView-meta.xml
<ListView>
    <fullName>My_Quotes</fullName>
    <columns>NAME</columns>
    <columns>Quote_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Quote_Net_Amount__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Contact__c</columns>
    <columns>Project__c</columns>
    <columns>Order_Reference__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Running_User_is_Account_Owner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Angebote meiner Accounts</label>
</ListView>